src/include/jme/jme.h

            int jme_jpl_ecliptic_state_naif( double jd_time, int target_naif, int center_naif, int unit, double *state, char *error );
            int jme_jpl_ecliptic_state_split( double jd0, double time_offset, int target_body, int center_body, int unit, double *state, char *error );
            int jme_jpl_ecliptic_state_split_naif( double jd0, double time_offset, int target_naif, int center_naif, int unit, double *state, char *error );
            int jme_jpl_ecliptic_state_utc( int year, int month, int day, int hour, int minute, double second, int calendar, int target_body, int center_body, int unit, double *state, char *error );
            int jme_jpl_ecliptic_state_utc_naif( int year, int month, int day, int hour, int minute, double second, int calendar, int target_naif, int center_naif, int unit, double *state, char *error );
            int jme_jpl_file_version(char *buffer, unsigned int buffer_size, char *error);
            int jme_jpl_id_by_name(const char *name, int *id, char *error);
            int jme_jpl_is_available(void);
            int jme_jpl_is_open(void);
            int jme_jpl_is_thread_safe(char *error);
            int jme_jpl_max_supported_order(int segment_type);
            int jme_jpl_name_by_id(int id, char *name, unsigned int name_size, char *error);
            int jme_jpl_open(const char *path, char *error);
            int jme_jpl_open_array(int path_count, const char *const *paths, char *error);
            int jme_jpl_orientation_record_count(char *error);
            int jme_jpl_orientation_record_index( int index, int *target, double *first_time, double *last_time, int *frame, int *segment_type, char *error );
            int jme_jpl_orientation_state_naif( double jd_time, int target_naif, int unit, double *state, char *error );