lib/src/jme_bindings.dart


  int jme_jpl_ecliptic_state_naif(
    double jd_time,
    int target_naif,
    int center_naif,
    int unit,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_ecliptic_state_naif(
      jd_time,
      target_naif,
      center_naif,
      unit,
      state,
      error,
    );
  }

  late final _jme_jpl_ecliptic_state_naifPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_ecliptic_state_naif');
  late final _jme_jpl_ecliptic_state_naif =
      _jme_jpl_ecliptic_state_naifPtr.asFunction<
          int Function(double, int, int, int, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>();

  int jme_jpl_ecliptic_state_split(
    double jd0,
    double time_offset,
    int target_body,
    int center_body,
    int unit,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_ecliptic_state_split(
      jd0,
      time_offset,
      target_body,
      center_body,
      unit,
      state,
      error,
    );
  }

  late final _jme_jpl_ecliptic_state_splitPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_ecliptic_state_split');
  late final _jme_jpl_ecliptic_state_split =
      _jme_jpl_ecliptic_state_splitPtr.asFunction<
          int Function(double, double, int, int, int, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>();

  int jme_jpl_ecliptic_state_split_naif(
    double jd0,
    double time_offset,
    int target_naif,
    int center_naif,
    int unit,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_ecliptic_state_split_naif(
      jd0,
      time_offset,
      target_naif,
      center_naif,
      unit,
      state,
      error,
    );
  }

  late final _jme_jpl_ecliptic_state_split_naifPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_ecliptic_state_split_naif');
  late final _jme_jpl_ecliptic_state_split_naif =
      _jme_jpl_ecliptic_state_split_naifPtr.asFunction<
          int Function(double, double, int, int, int, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>();

  int jme_jpl_ecliptic_state_utc(
    int year,
    int month,
    int day,
    int hour,
    int minute,
    double second,
    int calendar,
    int target_body,
    int center_body,
    int unit,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_ecliptic_state_utc(
      year,
      month,
      day,
      hour,
      minute,
      second,
      calendar,
      target_body,
      center_body,
      unit,
      state,
      error,
    );
  }

  late final _jme_jpl_ecliptic_state_utcPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_ecliptic_state_utc');
  late final _jme_jpl_ecliptic_state_utc =
      _jme_jpl_ecliptic_state_utcPtr.asFunction<
          int Function(int, int, int, int, int, double, int, int, int, int,
              ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>();

  int jme_jpl_ecliptic_state_utc_naif(
    int year,
    int month,
    int day,
    int hour,
    int minute,
    double second,
    int calendar,
    int target_naif,
    int center_naif,
    int unit,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_ecliptic_state_utc_naif(
      year,
      month,
      day,
      hour,
      minute,
      second,
      calendar,
      target_naif,
      center_naif,
      unit,
      state,
      error,
    );
  }

  late final _jme_jpl_ecliptic_state_utc_naifPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_ecliptic_state_utc_naif');
  late final _jme_jpl_ecliptic_state_utc_naif =
      _jme_jpl_ecliptic_state_utc_naifPtr.asFunction<
          int Function(int, int, int, int, int, double, int, int, int, int,
              ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>();

  int jme_jpl_file_version(
    ffi.Pointer<ffi.Char> buffer,
    int buffer_size,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_file_version(
      buffer,
      buffer_size,
      error,
    );
  }

  late final _jme_jpl_file_versionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.UnsignedInt,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_file_version');
  late final _jme_jpl_file_version = _jme_jpl_file_versionPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>)>();

  int jme_jpl_id_by_name(
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Int> id,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_id_by_name(
      name,
      id,
      error,
    );
  }

  late final _jme_jpl_id_by_namePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_id_by_name');
  late final _jme_jpl_id_by_name = _jme_jpl_id_by_namePtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Char>)>();

  int jme_jpl_is_available() {
    return _jme_jpl_is_available();
  }

  late final _jme_jpl_is_availablePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('jme_jpl_is_available');
  late final _jme_jpl_is_available =
      _jme_jpl_is_availablePtr.asFunction<int Function()>();

  int jme_jpl_is_open() {
    return _jme_jpl_is_open();
  }

  late final _jme_jpl_is_openPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('jme_jpl_is_open');
  late final _jme_jpl_is_open =
      _jme_jpl_is_openPtr.asFunction<int Function()>();

  int jme_jpl_is_thread_safe(
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_is_thread_safe(
      error,
    );
  }

  late final _jme_jpl_is_thread_safePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'jme_jpl_is_thread_safe');
  late final _jme_jpl_is_thread_safe = _jme_jpl_is_thread_safePtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int jme_jpl_max_supported_order(
    int segment_type,
  ) {
    return _jme_jpl_max_supported_order(
      segment_type,
    );
  }

  late final _jme_jpl_max_supported_orderPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
          'jme_jpl_max_supported_order');
  late final _jme_jpl_max_supported_order =
      _jme_jpl_max_supported_orderPtr.asFunction<int Function(int)>();

  int jme_jpl_name_by_id(
    int id,
    ffi.Pointer<ffi.Char> name,
    int name_size,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_name_by_id(
      id,
      name,
      name_size,
      error,
    );
  }

  late final _jme_jpl_name_by_idPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Char>, ffi.UnsignedInt,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_name_by_id');
  late final _jme_jpl_name_by_id = _jme_jpl_name_by_idPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>)>();

  int jme_jpl_open(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_open(
      path,
      error,
    );
  }

  late final _jme_jpl_openPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('jme_jpl_open');
  late final _jme_jpl_open = _jme_jpl_openPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  int jme_jpl_open_array(
    int path_count,
    ffi.Pointer<ffi.Pointer<ffi.Char>> paths,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_open_array(
      path_count,
      paths,
      error,
    );
  }

  late final _jme_jpl_open_arrayPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_open_array');
  late final _jme_jpl_open_array = _jme_jpl_open_arrayPtr.asFunction<
      int Function(
          int, ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Char>)>();

  int jme_jpl_orientation_record_count(
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_orientation_record_count(
      error,
    );
  }

  late final _jme_jpl_orientation_record_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'jme_jpl_orientation_record_count');
  late final _jme_jpl_orientation_record_count =
      _jme_jpl_orientation_record_countPtr
          .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int jme_jpl_orientation_record_index(
    int index,
    ffi.Pointer<ffi.Int> target,
    ffi.Pointer<ffi.Double> first_time,
    ffi.Pointer<ffi.Double> last_time,
    ffi.Pointer<ffi.Int> frame,
    ffi.Pointer<ffi.Int> segment_type,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_orientation_record_index(
      index,
      target,
      first_time,
      last_time,
      frame,
      segment_type,
      error,
    );
  }

  late final _jme_jpl_orientation_record_indexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_orientation_record_index');
  late final _jme_jpl_orientation_record_index =
      _jme_jpl_orientation_record_indexPtr.asFunction<
          int Function(
              int,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>)>();

  int jme_jpl_orientation_state_naif(
    double jd_time,
    int target_naif,
    int unit,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_orientation_state_naif(
      jd_time,
      target_naif,
      unit,
      state,
      error,
    );
  }

  late final _jme_jpl_orientation_state_naifPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_orientation_state_naif');
  late final _jme_jpl_orientation_state_naif =
      _jme_jpl_orientation_state_naifPtr.asFunction<
          int Function(double, int, int, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>();
